tests/specs/check/export_equals_es_module/main.out
Check [WILDCARD]main.ts
TS1203 [ERROR]: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
export = f;
~~~~~~
    at file://[WILDCARD]/main.ts:4:1

error: Type checking failed.
