tests/specs/check/export_equals_es_module/main.ts
function f(): string {
  return "x";
}
export = f;
